.metadata/.plugins/org.eclipse.cdt.ui/test.build.log
06:53:51 **** Incremental Build of configuration Debug for project test ****
make -j4 all 
arm-none-eabi-gcc "../User/Src/_105_button.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/CLCD/Inc -I../Drivers/Seven_segment/Inc -I../User/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"User/Src/_105_button.d" -MT"User/Src/_105_button.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "User/Src/_105_button.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/CLCD/Inc -I../Drivers/Seven_segment/Inc -I../User/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../User/Src/_105_button.c:42:20: error: initializer element is not constant
   42 | Button* button_1 = new_button(BUTTON_1_GPIO_Port, BUTTON_1_Pin);
      |                    ^~~~~~~~~~
make: *** [User/Src/subdir.mk:22: User/Src/_105_button.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:105:3: warning: implicit declaration of function '_7SEG_GPIO_Init'; did you mean 'MX_GPIO_Init'? [-Wimplicit-function-declaration]
  105 |   _7SEG_GPIO_Init();
      |   ^~~~~~~~~~~~~~~
      |   MX_GPIO_Init
../Core/Src/main.c:106:3: warning: implicit declaration of function 'CLCD_GPIO_Init'; did you mean 'MX_GPIO_Init'? [-Wimplicit-function-declaration]
  106 |   CLCD_GPIO_Init();
      |   ^~~~~~~~~~~~~~
      |   MX_GPIO_Init
../Core/Src/main.c:107:3: warning: implicit declaration of function 'CLCD_Init' [-Wimplicit-function-declaration]
  107 |   CLCD_Init();
      |   ^~~~~~~~~
"make -j4 all" terminated with exit code 2. Build might be incomplete.

06:53:51 Build Failed. 3 errors, 3 warnings. (took 841ms)

